--- a/Coding Project/server/bin/src/main/resources/application.properties
+++ b/Coding Project/server/bin/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=back-end
 # to disable docker compose in case we need it to run our application locally to run frontend
 spring.docker.compose.enabled=false
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+app.environment=development
